add kufar parser service